# Steam-Bot

./: LICENSE  README.md  main.py  pyproject.toml
cogs/: help.py  load.py  on_command_error.py  sales.py  search.py
utils/: config.py  get_data.py  load_thread.py
